@@ -497,6 +497,11 @@ void wxVListBoxComboPopup::Insert( const wxString& item, int pos )
     }
 
     m_strings.Insert(item,pos);
+
+    // Only insert client data if client data is used
+    if ( (int)m_clientDatas.size() >= pos )
+        m_clientDatas.Insert(NULL, pos);
+
     m_widths.Insert(-1,pos);
     m_widthsDirty = true;
 
