@@ -96,6 +96,8 @@ All (GUI):
 - wxRTC: speeded up image saving to XML (WriteHex).
 - wxRTC: added ForceDelayedLayout to override delayed layout for large buffers.
 - Fixed buffer overrun when saving ICO image with a width that's not a multiple of 4.
+- Fixed wxOwnerDrawnComboBox/wxBitmapComboBox client data corruption when
+  wxCB_SORT is used.
 
 wxGTK:
 
